# playground

./: .gitignore  cache_hashing.py
PLRU/: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  bitvector.h  exec  main.cpp  plru.cpp  plru.h
RandomStore/: .clang-format  .clang-tidy  a.out  main.cpp  naiverandomstore.h  randomstore  randomstore.h
SetAssociativeCache/: cache.h  cache_block.cpp  cache_block.h  cache_set.cpp  cache_set.h  memory.cpp  memory.h
cpu-reordering-sim/reorder-cpu/: Cargo.toml
cpu-sim/fancy-cpu/: Cargo.toml
cpu-sim/fancy-cpu/src/: isa.rs  main.rs
mutex-impl/c/: Makefile  mutex.c  mutex.h  test_mutex  test_mutex.c
mutex-impl/c/test_mutex.dSYM/Contents/Resources/DWARF/: test_mutex
mutex-impl/cpp/: CMakeLists.txt  mutex.cpp  mutex.h  test_mutex.cpp
mutex-impl/rust/mutex/src/: main.rs  mutex.rs
mutex-impl/zig/src/: main.zig  mutex.zig
old-stuff/: MontyHall.cpp  MontyHall.java  TicTacToe.java  fastModularExponentiation.cpp
old-stuff/Games/LoveTutorial/: ai.lua  background.lua  ball.lua  conf.lua  main.lua  player.lua
rop-emporium/1-ret2win/: .gdb_history  solve.py
rop-emporium/2-split/: .gdb_history  solve.py
rop-emporium/3-callme/: .gdb_history  solve.py
